Remove unrelated Typo

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2299,7 +2299,7 @@ synchronization.help.serverUserName                  = Your username on server
 synchronization.info                                 = On this page you can manually synchronize your posts with your configured systems. 
 synchronization.info.plan                            = At first you need to create a synchronization plan. The plan contains information about changed posts. You can check which changes will be performed during synchronization. After the creation of the plan you cn decide whether or not to perform the synchronization. Only creating the plan will chnge nothing in either system.
 synchronization.info.reset                           = If you see some errors in your synchronization plan, or if some error occures continually if you try to synchronize you can try to reset your synchronization status.
-synchronization.intro                                = Our synchronization service allows you to keep your bookmarks and publications in sync between two systems. Therefore, your need an account on both systems.
+synchronization.intro                                = Our synchronization service allows you to keep your bookmarks and publications in sync between two systems. Therefore, you need an account on both systems.
 synchronization.lastSyncResults                      = status of last synchronization
 synchronization.lastSyncTimes                        = time of last synchronization
 synchronization.lastWins                             = last wins
