added edit url to url generator
added more messages

fixed more bugs

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -312,7 +312,10 @@ close = close
 
 community = community
 
-community.page = Community Page
+community.generalinformation = General Information
+community.page               = Community Page
+community.warning.edit       = Edit your own post.
+community.warning.view       = You are currently viewing the community post.
 
 concept.sidebar.title       = browse
 concept.title_with_count    = concepts of {0} ({1})
