--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -311,7 +311,10 @@ close = schlie\u00DFen
 
 community = Community
 
-community.page = Community Seite
+community.generalinformation = Allgemeine Informationen
+community.page               = Community Seite
+community.warning.edit       = Bearbeiten Sie Ihren eigenen Eintrag.
+community.warning.view       = Sie betrachten hier den Gemeinschaftseintrag.
 
 concept.sidebar.title       = St\u00F6bern
 concept.title_with_count    = Konzepte von {0} ({1})
