info text to scan code section on clipboard page

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1749,6 +1749,7 @@ post_bibtex.pub_snippet.enter_bibtex_here            = Ihr BibTeX
 post_bibtex.pub_snippet.heading                      = Tragen Sie hier Ihren BibTeX- oder EndNote-Schnipsel ein:
 post_bibtex.pub_snippet.snippet                      = BibTeX/EndNote-Schnipsel
 post_bibtex.pub_snippet.title                        = BibTeX/EndNote-Schnipsel
+post_bibtex.scan.info								 = Mit Ihrer Webcam k\u00F6nnen Sie die Barcodes Ihrer B\u00FCcher scannen, um neue Publikationen hinzuzuf\u00FCgen. Als Ergebnis bekommen Sie ein vorausgef\u00FClltes Formular mit allen verf\u00FCgbaren Metadaten zum Buch.
 post_bibtex.scan.title                               = Code scannen
 post_bibtex.upload.description                       = Hier k\u00F6nnen Sie eine bestehende BibTeX- oder, EndNote-Datei hochladen. Vergewissern Sie sich, dass Sie die korrekte Kodierung gew\u00E4hlt haben. Falls die Datei nur wenige Eintr\u00E4ge enth\u00E4lt, k\u00F6nnen Sie diese auf der folgenden Seite bearbeiten.
 post_bibtex.upload.heading                           = Laden Sie Ihre BibTeX- oder EndNote-Datei hier hoch:
