--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1301,6 +1301,9 @@ opensocial.user.profile.title    = profile page
 options.authors = - all authors -
 options.tags    = - all tags -\u0009   
 
+org.bibsonomy.recommender.item.model.RecommendedPost.header = Items
+org.bibsonomy.recommender.tag.model.RecommendedTag.header   = Tags
+
 overview = overview
 
 page.grouptag.headline = group {0} with tags {1}
@@ -1801,7 +1804,7 @@ post_bibtex.pub_snippet.enter_bibtex_here            = Your BibTeX
 post_bibtex.pub_snippet.heading                      = Enter your BibTeX or EndNote snippet here:
 post_bibtex.pub_snippet.snippet                      = BibTeX/EndNote snippet
 post_bibtex.pub_snippet.title                        = BibTeX/EndNote snippet
-post_bibtex.scan.info								 = Using your webcam, you can scan the barcode on your books to add a new publication. You will get a prefilled publication form with all the available meta-data of the book. 
+post_bibtex.scan.info                                = Using your webcam, you can scan the barcode on your books to add a new publication. You will get a prefilled publication form with all the available meta-data of the book. 
 post_bibtex.scan.title                               = scan code
 post_bibtex.upload.description                       = Here you can upload your existing BibTeX or EndNote file. Be sure to select the correct character encoding. If the file contains just a few entries you can tag them on the next page.
 post_bibtex.upload.heading                           = Upload your BibTeX or EndNote file here:
@@ -1855,9 +1858,6 @@ ranking.tag_overlap    = tag overlap
 ranking.tfidf          = tfidf
 
 recommended.pagetitle = Recommended posts
-
-recommender.impl.model.RecommendedItem.header = Items
-recommender.impl.model.RecommendedTag.header  = Tags
 
 register.acceptPrivacy              = I accept the <a href="/help/Privacy" target="_blank">privacy statement and the general terms and conditions</a> of {0}.
 register.activate                   = To complete your registration please click the link in your registration mail within the next 24 hours. <br/><br/>If you cannot click the activation link, you can repeat the registration process with the same user name.
