--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -282,7 +282,7 @@ buttons.select_code                  = select code
 buttons.shortcut_bibtex              = Shortcut for posting publication references
 buttons.shortcut_bibtex_end          = Then you just need to select (highlight) a publication entry you find on a web page and after clicking on the button the entry will be stored in {0}. 
 buttons.shortcut_bookmarks           = Shortcut for posting bookmarks
-buttons.shortcut_bookmarks_end       = Whenever you are on an interesting webpage, you cn just click this button. You are asked to type in some tags, and the bookmark is automatically added to your collection. 
+buttons.shortcut_bookmarks_end       = Whenever you are on an interesting webpage, you can just click this button. You are asked to type in some tags, and the bookmark is automatically added to your collection. 
 buttons.shortcut_login_one           = If you were 
 buttons.shortcut_login_three         = , you could find here a button which you can drag to the links toolbar of your browser. 
 buttons.shortcut_login_two           = logged in 
