--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest.bib
@@ -14,10 +14,7 @@ year = {2004},
 doi = {10.1021/ci049894n},
     note ={PMID: 15554657},
 
-URL = { 
-        http://dx.doi.org/10.1021/ci049894n
-    
-},
+URL = {http://dx.doi.org/10.1021/ci049894n},
 eprint = { 
         http://dx.doi.org/10.1021/ci049894n
     
