--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest3.bib
@@ -14,10 +14,7 @@ year = {2011},
 doi = {10.1021/nn103618d},
     note ={PMID: 21366271},
 
-URL = { 
-        http://dx.doi.org/10.1021/nn103618d
-    
-},
+URL = {http://dx.doi.org/10.1021/nn103618d},
 eprint = { 
         http://dx.doi.org/10.1021/nn103618d
     
