Fixes #2612: reimplement the jstorScraper to very simple structure

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest1.bib
@@ -1,32 +1,10 @@
-
-
-
-
-JSTOR CITATION LIST
-
-@comment{{ Your use of the JSTOR archive indicates your acceptance of JSTOR's Terms and Conditions of Use https://www.jstor.org/page/info/about/policies/terms.jsp. If you have questions or need assistance using JSTOR, please contact JSTOR Support (https://www.jstor.org/action/showContactSupportForm) and let us know how we can help you. }}
-@comment{{NUMBER OF CITATIONS : 1}}
-
-    @article{1879,
-     jstor_articletype = {research-article},
-     title = {Our Steel Engravings},
-     author = {},
-     journal = {The Art Journal (1875-1887)},
-     jstor_issuetitle = {},
-     volume = {5},
-     number = {},
-     series = {New Series},
-     jstor_formatteddate = {1879},
-     pages = {p. 153},
-     url = {http://www.jstor.org/stable/20569359},
-     ISSN = {2152243X},
-     abstract = {},
-     language = {English},
-     year = {1879},
-     publisher = {},
-     copyright = {},
-    }
-
-
-@comment{{ These records have been provided through JSTOR. http://www.jstor.org }}
+@book{10.2307/j.ctt7zv8mk,
+ ISBN = {9780691117621},
+ URL = {http://www.jstor.org/stable/j.ctt7zv8mk},
+ abstract = {<p>Genomic signal processing (GSP) can be defined as the analysis, processing, and use of genomic signals to gain biological knowledge, and the translation of that knowledge into systems-based applications that can be used to diagnose and treat genetic diseases. Situated at the crossroads of engineering, biology, mathematics, statistics, and computer science, GSP requires the development of both nonlinear dynamical models that adequately represent genomic regulation, and diagnostic and therapeutic tools based on these models. This book facilitates these developments by providing rigorous mathematical definitions and propositions for the main elements of GSP and by paying attention to the validity of models relative to the data. Ilya Shmulevich and Edward Dougherty cover real-world situations and explain their mathematical modeling in relation to systems biology and systems medicine.</p><p><em>Genomic Signal Processing</em>makes a major contribution to computational biology, systems biology, and translational genomics by providing a self-contained explanation of the fundamental mathematical issues facing researchers in four areas: classification, clustering, network modeling, and network intervention.</p>},
+ author = {Ilya Shmulevich, Edward R. Dougherty},
+ publisher = {Princeton University Press},
+ title = {Genomic Signal Processing},
+ year = {2007}
+}
 
