--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest2.bib
@@ -1,32 +1,11 @@
-
-
-
-
-JSTOR CITATION LIST
-
-@comment{{ Your use of the JSTOR archive indicates your acceptance of JSTOR's Terms and Conditions of Use https://www.jstor.org/page/info/about/policies/terms.jsp. If you have questions or need assistance using JSTOR, please contact JSTOR Support (https://www.jstor.org/action/showContactSupportForm) and let us know how we can help you. }}
-@comment{{NUMBER OF CITATIONS : 1}}
-
-    @article{2006,
-     jstor_articletype = {meeting-report},
-     title = {Star Formation in the Era of the Three Great Observatories},
-     author = {Scott J. Wolk and Norbert Schulz and John Stauffer and Nancy Evans and Leisa Townsley and Tom Megeath and Dave Huenemoerder and Claus Leitherer, and Ray Jayawardana},
-     journal = {Publications of the Astronomical Society of the Pacific},
-     jstor_issuetitle = {},
-     volume = {118},
-     number = {844},
-     jstor_formatteddate = {June 2006},
-     pages = {pp. 939-946},
-     url = {http://www.jstor.org/stable/10.1086/505090},
-     ISSN = {00046280},
-     abstract = {},
-     language = {English},
-     year = {2006},
-     publisher = {The University of Chicago Press on behalf of the Astronomical Society of the Pacific},
-     copyright = {Copyright © 2006 The University of Chicago Press},
-    }
-
-
-@comment{{ These records have been provided through JSTOR. http://www.jstor.org }}
-
+@article{10.2307/20569359,
+ ISSN = {2152243X},
+ URL = {http://www.jstor.org/stable/20569359},
+ journal = {The Art Journal (1875-1887)},
+ pages = {153-153},
+ publisher = {Brooklyn Museum},
+ title = {Our Steel Engravings},
+ volume = {5},
+ year = {1879}
+}
 
