--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest.bib
@@ -1,31 +1,13 @@
-
-
-
-
-JSTOR CITATION LIST
-
-@comment{{ Your use of the JSTOR archive indicates your acceptance of JSTOR's Terms and Conditions of Use https://www.jstor.org/page/info/about/policies/terms.jsp. If you have questions or need assistance using JSTOR, please contact JSTOR Support (https://www.jstor.org/action/showContactSupportForm) and let us know how we can help you. }}
-@comment{{NUMBER OF CITATIONS : 1}}
-
-    @article{2004,
-     jstor_articletype = {research-article},
-     title = {Polynomial Epidemics and Clustering in Contact Networks},
-     author = {Szendrői, Balázs and Csányi, Gábor},
-     journal = {Proceedings: Biological Sciences},
-     jstor_issuetitle = {Supplement 5},
-     volume = {271},
-     number = {},
-     jstor_formatteddate = {Aug. 7, 2004},
-     pages = {pp. S364-S366},
-     url = {http://www.jstor.org/stable/4142852},
-     ISSN = {09628452},
-     abstract = {It is widely known that the spread of the human immunodeficiency virus was slower than exponential in several populations, even at the very beginning of the epidemic. We show that this implies a significant reduction in the effective reproductive rate of the epidemic, and describe a general mechanism, related to the clustering properties of the disease transmission network, that is capable of explaining this reduction. Our considerations provide what is, to our knowledge, a new angle on polynomial epidemic processes, and may have implications for the choice of strategy against such epidemics.},
-     language = {English},
-     year = {2004},
-     publisher = {The Royal Society},
-     copyright = {Copyright © 2004 The Royal Society},
-    }
-
-
-@comment{{ These records have been provided through JSTOR. http://www.jstor.org }}
+@article{10.2307/4142852,
+ ISSN = {09628452},
+ URL = {http://www.jstor.org/stable/4142852},
+ abstract = {It is widely known that the spread of the human immunodeficiency virus was slower than exponential in several populations, even at the very beginning of the epidemic. We show that this implies a significant reduction in the effective reproductive rate of the epidemic, and describe a general mechanism, related to the clustering properties of the disease transmission network, that is capable of explaining this reduction. Our considerations provide what is, to our knowledge, a new angle on polynomial epidemic processes, and may have implications for the choice of strategy against such epidemics.},
+ author = {Balázs Szendrői, Gábor Csányi},
+ journal = {Proceedings: Biological Sciences},
+ pages = {S364-S366},
+ publisher = {The Royal Society},
+ title = {Polynomial Epidemics and Clustering in Contact Networks},
+ volume = {271},
+ year = {2004}
+}
 
