show message from SyncSettingsController in view disabled 'auto sync' checkbox in syncForm

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -979,18 +979,18 @@ issues = <a href="http://bitbucket.org/bibsonomy/bibsonomy/issues">Report Issues
 
 joinGroup = join group
 
-joinGroup.action                = send request
-joinGroup.already.member.error  = You already are a member of this group.
-joinGroup.already.request.error = You have already sent a group join request.
-joinGroup.deny.noUser           = The user you try to deny access does not exist.
-joinGroup.info                  = To join a group you must send a request to the group admin.
+joinGroup.action                   = send request
+joinGroup.already.member.error     = You already are a member of this group.
+joinGroup.already.request.error    = You have already sent a group join request.
+joinGroup.deny.noUser              = The user you try to deny access does not exist.
+joinGroup.info                     = To join a group you must send a request to the group admin.
 joinGroup.joinRequestDisabled      = This group does not allow sending join requests.
-joinGroup.reason                = reason
-joinGroup.reason.hint           = Give a short motivation of why you want to join this group.
-joinGroup.reason.hint.appendix  = ({0} characters)
-joinGroup.request.sent.message  = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group moderators.
-joinGroup.short                 = join
-joinGroup.spammerError          = Joining this group is not possible.
+joinGroup.reason                   = reason
+joinGroup.reason.hint              = Give a short motivation of why you want to join this group.
+joinGroup.reason.hint.appendix     = ({0} characters)
+joinGroup.request.sent.message     = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group moderators.
+joinGroup.short                    = join
+joinGroup.spammerError             = Joining this group is not possible.
 joinGroup.userSharedDocuments      = Share your documents with the group
 joinGroup.userSharedDocuments.hint = If activated, other group members have access to your documents.
 
@@ -1803,7 +1803,7 @@ post_bibtex.pub_snippet.enter_bibtex_here            = Your BibTeX
 post_bibtex.pub_snippet.heading                      = Enter your BibTeX or EndNote snippet here:
 post_bibtex.pub_snippet.snippet                      = BibTeX/EndNote snippet
 post_bibtex.pub_snippet.title                        = BibTeX/EndNote snippet
-post_bibtex.scan.info								 = Using your webcam, you can scan the barcode on your books to add a new publication. You will get a prefilled publication form with all the available meta-data of the book. 
+post_bibtex.scan.info                                = Using your webcam, you can scan the barcode on your books to add a new publication. You will get a prefilled publication form with all the available meta-data of the book. 
 post_bibtex.scan.title                               = scan code
 post_bibtex.upload.description                       = Here you can upload your existing BibTeX or EndNote file. Be sure to select the correct character encoding. If the file contains just a few entries you can tag them on the next page.
 post_bibtex.upload.heading                           = Upload your BibTeX or EndNote file here:
@@ -1959,7 +1959,7 @@ reporting.publication.type.standard      = standard
 reporting.publication.type.techreport    = techreport
 reporting.publication.type.unpublished   = unpublished
 
-requestGroup.spammerError = Requesting a new group is not possible.
+requestGroup.spammerError      = Requesting a new group is not possible.
 requestGroup.userNotExistError = There is no user with the name "{0}".
 
 reset = reset
@@ -2272,6 +2272,8 @@ success.groupDelete           = The group {0} has been deleted successfully.
 success.groupRequest.sent     = Your request to create the group {0} has been forwarded to the system's administrators.
 success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's moderators.
 
+sync.auto.firstsync.required                         = Welcome to your initial synchronization for the auto-sync!\r\nPlease retrieve a sync plan and check its correctness. Then, you run the sync and the automatic synchronization will enabled.
+
 synchronization.addService                           = add service
 synchronization.autosync                             = automatic synchronization
 synchronization.client                               = synchronization client
@@ -2414,19 +2416,19 @@ tags.of_resource         = tags of this resource
 
 text = text
 
-time.a_day           = a day
-time.a_minute        = a minute
-time.a_month         = a month
-time.a_year          = a year
-time.an_hour         = an hour
-time.justnow         = just now
-time.postfix         = \ ago
-time.prefix          = 
-time.x_days          = {0} days
-time.x_hours         = {0} hours
-time.x_minutes       = {0} minutes
-time.x_months        = {0} months
-time.x_years         = {0} years
+time.a_day     = a day
+time.a_minute  = a minute
+time.a_month   = a month
+time.a_year    = a year
+time.an_hour   = an hour
+time.justnow   = just now
+time.postfix   = \ ago
+time.prefix    = 
+time.x_days    = {0} days
+time.x_hours   = {0} hours
+time.x_minutes = {0} minutes
+time.x_months  = {0} months
+time.x_years   = {0} years
 
 totop = to top
 
