--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -935,18 +935,18 @@ issues = <a href="http://bitbucket.org/bibsonomy/bibsonomy/issues">Probleme meld
 
 joinGroup = Gruppe beitreten
 
-joinGroup.action                = Anfrage senden
-joinGroup.already.member.error  = Sie sind bereits ein Mitglied dieser Gruppe.
-joinGroup.already.request.error = Sie haben bereits einen Gruppen-Mitgliedsschaftanfrage gesendet. 
-joinGroup.deny.noUser           = Der Benutzer, dem Sie die Mitgliedschaft verwehren wollen existiert nicht.
-joinGroup.info                  = Um einer Gruppe beizutreten, m\u00FCssen Sie eine Anfrage an den Gruppenadministrator senden.
+joinGroup.action                   = Anfrage senden
+joinGroup.already.member.error     = Sie sind bereits ein Mitglied dieser Gruppe.
+joinGroup.already.request.error    = Sie haben bereits einen Gruppen-Mitgliedsschaftanfrage gesendet. 
+joinGroup.deny.noUser              = Der Benutzer, dem Sie die Mitgliedschaft verwehren wollen existiert nicht.
+joinGroup.info                     = Um einer Gruppe beizutreten, m\u00FCssen Sie eine Anfrage an den Gruppenadministrator senden.
 joinGroup.joinRequestDisabled      = Diese Gruppe erlaubt kein Senden von Beitrittsgesuchen.
-joinGroup.reason                = Begr\u00FCndung
-joinGroup.reason.hint           = Bitte begr\u00FCnden Sie, warum Sie der Gruppe beitreten m\u00F6chten.
-joinGroup.reason.hint.appendix  = ({0} Zeichen)
-joinGroup.request.sent.message  = Ihre Anfrage der Gruppe <a href="/group/{0}">{1}</a> beizutreten wurde an die Moderatoren der Gruppe gesendet.
-joinGroup.short                 = beitreten
-joinGroup.spammerError          = Sie k\u00F6nnen dieser Gruppe nicht beitreten.
+joinGroup.reason                   = Begr\u00FCndung
+joinGroup.reason.hint              = Bitte begr\u00FCnden Sie, warum Sie der Gruppe beitreten m\u00F6chten.
+joinGroup.reason.hint.appendix     = ({0} Zeichen)
+joinGroup.request.sent.message     = Ihre Anfrage der Gruppe <a href="/group/{0}">{1}</a> beizutreten wurde an die Moderatoren der Gruppe gesendet.
+joinGroup.short                    = beitreten
+joinGroup.spammerError             = Sie k\u00F6nnen dieser Gruppe nicht beitreten.
 joinGroup.userSharedDocuments      = Ihre Dokumente mit dieser Gruppe teilen
 joinGroup.userSharedDocuments.hint = Bei aktivierter Freigabe haben andere Gruppenmitglieder Zugriff auf Ihre Dokumente.
 
@@ -1751,7 +1751,7 @@ post_bibtex.pub_snippet.enter_bibtex_here            = Ihr BibTeX
 post_bibtex.pub_snippet.heading                      = Tragen Sie hier Ihren BibTeX- oder EndNote-Schnipsel ein:
 post_bibtex.pub_snippet.snippet                      = BibTeX/EndNote-Schnipsel
 post_bibtex.pub_snippet.title                        = BibTeX/EndNote-Schnipsel
-post_bibtex.scan.info								 = Mit Ihrer Webcam k\u00F6nnen Sie die Barcodes Ihrer B\u00FCcher scannen, um neue Publikationen hinzuzuf\u00FCgen. Als Ergebnis bekommen Sie ein vorausgef\u00FClltes Formular mit allen verf\u00FCgbaren Metadaten zum Buch.
+post_bibtex.scan.info                                = Mit Ihrer Webcam k\u00F6nnen Sie die Barcodes Ihrer B\u00FCcher scannen, um neue Publikationen hinzuzuf\u00FCgen. Als Ergebnis bekommen Sie ein vorausgef\u00FClltes Formular mit allen verf\u00FCgbaren Metadaten zum Buch.
 post_bibtex.scan.title                               = Code scannen
 post_bibtex.upload.description                       = Hier k\u00F6nnen Sie eine bestehende BibTeX- oder, EndNote-Datei hochladen. Vergewissern Sie sich, dass Sie die korrekte Kodierung gew\u00E4hlt haben. Falls die Datei nur wenige Eintr\u00E4ge enth\u00E4lt, k\u00F6nnen Sie diese auf der folgenden Seite bearbeiten.
 post_bibtex.upload.heading                           = Laden Sie Ihre BibTeX- oder EndNote-Datei hier hoch:
@@ -1906,7 +1906,7 @@ reporting.publication.type.standard      = Standard
 reporting.publication.type.techreport    = ver\u00F6ffentlichter Bericht einer Hochschule oder anderen Institution
 reporting.publication.type.unpublished   = nicht formell ver\u00F6ffentlichtes Dokument
 
-requestGroup.spammerError = Sie k\u00F6nnen keine Gruppen beantragen.
+requestGroup.spammerError      = Sie k\u00F6nnen keine Gruppen beantragen.
 requestGroup.userNotExistError = Es existiert kein Benutzer mit dem Namen "{0}".
 
 reset = Reset
@@ -2221,6 +2221,8 @@ success.groupDelete           = Die Gruppe {0} wurde erfolgreich gel\u00F6scht.
 success.groupRequest.sent     = Ihr Wunsch, die Gruppe {0} zu erstellen wurde an die Systemadministratoren weitergeleitet.
 success.joinGroupRequest.sent = Ihr Wunsch, der Gruppe {0} beizutreten wurde an die Moderatoren dieser Gruppe weitergeleitet.
 
+sync.auto.firstsync.required                         = Wilkommen zu Ihrer initialen Synchronisierung f\u00FCr den Auto-Sync!\r\nBitte lassen Sie sich einen Sync-Plan erstellen und \u00FCberpr\u00FCfen diesen kurz auf dessen Korrektheit.\r\nAnschlie\u00DFend f\u00FChren Sie diesen aus und die automatische Synchronisierung ist aktiviert.
+
 synchronization.addService                           = Dienst hinzuf\u00FCgen
 synchronization.autosync                             = Autosynchronization
 synchronization.client                               = Synchronisationsclient
@@ -2363,19 +2365,19 @@ tags.of_resource         = Tags zu diesem Eintrag
 
 text = Text
 
-time.a_day           = einem Tag
-time.a_minute        = einer Minute
-time.a_month         = einem Monat
-time.a_year          = einem Jahr
-time.an_hour         = einer Stunde
+time.a_day     = einem Tag
+time.a_minute  = einer Minute
+time.a_month   = einem Monat
+time.a_year    = einem Jahr
+time.an_hour   = einer Stunde
 time.justnow   = gerade eben
-time.postfix         = 
-time.prefix          = vor 
-time.x_days          = {0} Tagen
-time.x_hours         = {0} Stunden
-time.x_minutes       = {0} Minuten
-time.x_months        = {0} Monaten
-time.x_years         = {0} Jahren
+time.postfix   = 
+time.prefix    = vor 
+time.x_days    = {0} Tagen
+time.x_hours   = {0} Stunden
+time.x_minutes = {0} Minuten
+time.x_months  = {0} Monaten
+time.x_years   = {0} Jahren
 
 totop = nach oben
 
