Added follow button

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -746,6 +746,7 @@ follow = follow
 follow.actions.delete.title                 = stop following {0}
 follow.addFollower                          = Follow somebody
 follow.followerof                           = You're followed by:
+follow.following                            = following
 # follow Seite
 follow.info.text1                           = You're not following this user: 
 follow.info.text2                           = You're following this user:
