--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -704,6 +704,7 @@ follow = folgen
 follow.actions.delete.title                 = {0} nicht mehr folgen
 follow.addFollower                          = Jemandem folgen:
 follow.followerof                           = Benutzer, die Ihnen folgen:
+follow.following                            = folgend
 # follow Seite
 follow.info.text1                           = Sie folgen dem Benutzer nicht: 
 follow.info.text2                           = Sie folgen dem Benutzer:
