show auto-sync info message on sync-page for each configured server on settings page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2272,7 +2272,7 @@ success.groupDelete           = The group {0} has been deleted successfully.
 success.groupRequest.sent     = Your request to create the group {0} has been forwarded to the system's administrators.
 success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's moderators.
 
-sync.auto.firstsync.required                         = Welcome to your initial synchronization for the auto-sync!\r\nPlease retrieve a sync plan and check its correctness. Then, you run the sync and the automatic synchronization will enabled.
+sync.auto.firstsync.required                         = To enable the automatic synchronization for this server, please retrieve a synchronization plan and check its correctness. \r\nAfter that you have to perform the initial synchronization by hand - if the sync was successful the auto-sync will be enabled.
 
 synchronization.addService                           = add service
 synchronization.autosync                             = automatic synchronization
