--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2221,7 +2221,7 @@ success.groupDelete           = Die Gruppe {0} wurde erfolgreich gel\u00F6scht.
 success.groupRequest.sent     = Ihr Wunsch, die Gruppe {0} zu erstellen wurde an die Systemadministratoren weitergeleitet.
 success.joinGroupRequest.sent = Ihr Wunsch, der Gruppe {0} beizutreten wurde an die Moderatoren dieser Gruppe weitergeleitet.
 
-sync.auto.firstsync.required                         = Wilkommen zu Ihrer initialen Synchronisierung f\u00FCr den Auto-Sync!\r\nBitte lassen Sie sich einen Sync-Plan erstellen und \u00FCberpr\u00FCfen diesen kurz auf dessen Korrektheit.\r\nAnschlie\u00DFend f\u00FChren Sie diesen aus und die automatische Synchronisierung ist aktiviert.
+sync.auto.firstsync.required                         = Um die automatische Synchronisierung f\u00FCr diesen Server zu aktivieren, fordern Sie bitte einen Synchronisationsplan an und \u00FCberpr\u00FCfen Sie diesen auf Korrektheit.\r\nDanach m\u00FCssen Sie die Synchronisation manuell durchf\u00FChren - wenn diese erfolgreich war, wird die automatische Synchronisierung aktiviert.
 
 synchronization.addService                           = Dienst hinzuf\u00FCgen
 synchronization.autosync                             = Autosynchronization
