better expected values

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AandAScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AandAScraperUnitURLTest.bib
@@ -1,5 +1,5 @@
 @article{refId0,
-	author={{H. Abgrall} and {E. Roueff}},
+	author={{Abgrall, H.} and {Roueff, E.}},
 	doi={10.1051/0004-6361:20053694},
 	journal={A&A},
 	month={},
