avoiding the #broken_Url problem

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
@@ -13,10 +13,7 @@ pages = {1-136},
 year = {2011},
 doi = {10.2200/S00334ED1V01Y201102WBE001},
 
-URL = { 
-        http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001
-    
-},
+URL = {http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001},
 eprint = { 
         http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001
     
