--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BMJScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BMJScraperUnitURLTest1.bib
@@ -1,4 +1,4 @@
-@article {noKey,
+@article {Field1221,
 	author = {Field, David J and Dorling, Jon S and Manktelow, Bradley N and Draper, Elizabeth S},
 	title = {Survival of extremely premature babies in a geographically defined population: prospective cohort study of 1994-9 compared with 2000-5},
 	volume = {336},
@@ -8,7 +8,8 @@
 	doi = {10.1136/bmj.39555.670718.BE},
 	publisher = {BMJ Publishing Group Ltd},
 	abstract = {Objective To assess changes in survival for infants born before 26 completed weeks of gestation.Design Prospective cohort study in a geographically defined population.Setting Former Trent health region of the United Kingdom.Subjects All infants born at 22+0 to 25+6 weeks{\textquoteright} gestation to mothers living in the region. Terminations were excluded but all other births of babies alive at the onset of labour or the delivery process were included.Main outcome measures Outcome for all infants was categorised as stillbirth, death without admission to neonatal intensivecare, death before discharge from neonatal intensivecare, and survival to discharge home in two time periods: 1994-9 and 2000-5 inclusive.Results The proportion of infants dying in delivery rooms was similar in the two periods, but a significant improvement was seen in the number of infants surviving to discharge (P\<0.001). Of 497 infants admitted to neonatal intensive care in 2000-5, 236 (47\%) survived to discharge compared with 174/490 (36\%) in 1994. These changes were attributable to substantial improvements in the survival of infants born at 24 and 25 weeks. During the 12 years of the study none of the 150 infants born at 22 weeks{\textquoteright} gestation survived. Of the infants born at 23 weeks who were admitted to intensive care, there was no significant improvement in survival to discharge in 2000-5 (12/65 (18\%) in 2000-5 v 15/81 (19\%) in 1994-9).Conclusions Survival of infants born at 24 and 25 weeks of gestation has significantly increased. Although over half the cohort of infants born at 23 weeks wasadmitted to neonatalintensive care, there was no improvement in survival at this gestation. Care for infants born at 22 weeks remained unsuccessful.},
-	isbn = {1468-5833},
 	issn = {0959-8138},
+	URL = {http://www.bmj.com/content/336/7655/1221},
+	eprint = {http://www.bmj.com/content/336/7655/1221.full.pdf},
 	journal = {BMJ}
 }
