--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NEJMScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NEJMScraperUnitURLTest1.bib
@@ -14,10 +14,7 @@ year = {2012},
 doi = {10.1056/NEJMra1100109},
     note ={PMID: 22256807},
 
-URL = { 
-        http://dx.doi.org/10.1056/NEJMra1100109
-    
-},
+URL = {http://dx.doi.org/10.1056/NEJMra1100109},
 eprint = { 
         http://dx.doi.org/10.1056/NEJMra1100109
     
