--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2078,6 +2078,7 @@ settings.group.disband.notEmptyInfoText                     = You can disband th
 settings.group.disband.yesToDeleteGroup                     = (type {0} to delete this group)
 settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
+settings.group.error.alreadyInvited                         = This user has already been invited into the group.
 settings.group.error.changeGroupRoleFailed                  = The group role of user {0} could not be edited.
 settings.group.error.groupDoesNotExist                      = The group, of which you wanted to change the settings, does not exist.
 settings.group.error.groupNotEmpty                          = There must not be other group members left, if you want to delete the group.
@@ -2362,6 +2363,7 @@ system.termsOfUse                        = <a href="/help_en/Privacy">Privacy & 
 systemtag = system tag
 
 tag.addRelatedTag                             = +
+tag.addTag                                    = add tag
 tag.asConceptFrom                             = as concept from
 # tags, concepts
 tag.asConceptFromAll                          = as concept from all users
