--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2311,6 +2311,7 @@ system.termsOfUse                        = <a href="/help_de/Datenschutz">Datens
 systemtag = Systemtag
 
 tag.addRelatedTag                             = +
+tag.addTag                                    = Tag hinzuf\u00FCgen
 tag.asConceptFrom                             = als Konzept von
 # tags, concepts
 tag.asConceptFromAll                          = als Konzept von allen Benutzern
