--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -2158,6 +2158,7 @@ system.termsOfUse                        = <a href="/help_en/Privacy"&gt;\u0423\
 systemtag = \u0441\u0438\u0441\u0442\u0435\u043C\u043D\u044B\u0439 \u0442\u044D\u0433
 
 tag.addRelatedTag                             = +
+tag.addTag                                    = 
 tag.asConceptFrom                             = \u043A\u0430\u043A \u043A\u043E\u043D\u0446\u0435\u043F\u0446\u0438\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 # tags, concepts
 tag.asConceptFromAll                          = \u043A\u0430\u043A \u043A\u043E\u043D\u0446\u0435\u043F\u0446\u0438\u044F \u0432\u0441\u0435\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
