better expected values

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MendeleyScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MendeleyScraperUnitURLTest.bib
@@ -5,9 +5,11 @@
   pages = {363-391},
   path = {/catalog/social-bookmarking-beispiel-bibsonomy/},
   canonicalId = {8bae9c19-d394-3df4-a52d-b7cac3595d1e},
+  eid = {2-s2.0-84864170657},
   issn = {1439-3107},
   isbn = {978-3-540-72215-1},
   doi = {10.1007/978-3-540-72216-8},
+  sgr = {84864170657},
   booktitle = {Social Semantic Web},
   author = {Schmitz, Christoph and Hotho, Andreas and Jäschke, Robert and Stumme, Gerd and Benz, Dominik and Grahl, Miranda and Krause, Beate},
   editor = {Blumauer, Andreas and Pellegrini, Tassilo},
