--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -488,6 +488,8 @@ discussion.references         = References
 discussion.resourceLink       = Show internal link to this {0}
 discussion.resourceLink.help  = You can use this internal link to create references to this post in your discussions. Just copy this internal link and paste it in your discussion text.
 discussion.resourceLink.title = internal link
+discussion.show.less          = show only the last five reviews/comments
+discussion.show.more          = show all discussion
 discussion.showGroup          = show posts of {0}
 discussion.showUser           = show posts of {0}
 
@@ -1586,7 +1588,8 @@ post.resource.comment.on                                = on
 post.resource.comment.placeholder                       = Write your comment \u2026
 post.resource.comment.text                              = text
 post.resource.comment.text.help                         = enter your comment
-post.resource.comment.updatedOn                         = last updated on
+post.resource.comment.update                            = update
+post.resource.comment.updatedOn                         = last updated 
 post.resource.copytags                                  = tags of copied post
 post.resource.crossref                                  = crossref
 post.resource.crossref.help                             = The BibTeX key this work is referring to (e.g., when an "inproceedings" entry references the corresponding "proceedings" entry).
@@ -1768,6 +1771,7 @@ post.resource.review.review                             = review
 post.resource.review.reviews                            = reviews
 post.resource.review.text                               = review
 post.resource.review.text.help                          = Enter your review here.
+post.resource.review.update                             = update
 post.resource.school                                    = school
 post.resource.school.help                               = name of the academic institution where a thesis was written
 post.resource.series                                    = series
@@ -1845,6 +1849,7 @@ publications = publications
 publications.abstract.headline   = Abstract
 publications.citations.headline  = Cite this publication
 publications.discussion.headline = Comments and Reviews
+publications.related.empty       = no publications found
 #publications
 publications.resource.headline   = Links and resources
 
@@ -1863,6 +1868,8 @@ ranking.normalized     = normalized
 ranking.not_normalized = not normalized
 ranking.tag_overlap    = tag overlap
 ranking.tfidf          = tfidf
+
+rating.reset = reset rating
 
 recommended.pagetitle = Recommended posts
 
