--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -448,6 +448,8 @@ discussion.references         = Referenzen
 discussion.resourceLink       = Den internen Link f\u00FCr diese {0} anzeigen
 discussion.resourceLink.help  = Sie k\u00F6nnen diesen internen Link benutzen, um diesen Eintrag in Ihren Diskussionen zu referenzieren. Sie m\u00FCssen nur diesen Link kopieren und in den Text zu ihrer Diskussion hinzuf\u00FCgen.
 discussion.resourceLink.title = Interner Link
+discussion.show.less          = nur die letzten f\u00FCnf Bewertungen/Kommentare zeigen
+discussion.show.more          = gesammte Diskussion anzeigen
 discussion.showGroup          = Zeige Eintr\u00E4ge von {0}
 discussion.showUser           = Zeige Eintr\u00E4ge von {0}
 
@@ -1536,7 +1538,8 @@ post.resource.comment.on                                = am
 post.resource.comment.placeholder                       = Schreiben Sie Ihren Kommentar \u2026
 post.resource.comment.text                              = Text
 post.resource.comment.text.help                         = Geben Sie Ihren Kommentar ein.
-post.resource.comment.updatedOn                         = zuletzt bearbeitet am
+post.resource.comment.update                            = aktualisieren
+post.resource.comment.updatedOn                         = zuletzt bearbeitet
 post.resource.copytags                                  = Tags des kopierten Eintrags 
 post.resource.crossref                                  = BibTeX-Querverweis
 post.resource.crossref.help                             = Der BibTeX-Schl\u00FCssel, auf den dieses Werk verweist (wenn z.B. ein "inproceedings"-Eintrag auf den zugeh\u00F6rigen "proceedings"-Eintrag verweist)
@@ -1716,6 +1719,7 @@ post.resource.review.review                             = Rezension
 post.resource.review.reviews                            = Rezensionen
 post.resource.review.text                               = Rezension
 post.resource.review.text.help                          = Geben Sie hier Ihre Rezension ein.
+post.resource.review.update                             = aktualisieren
 post.resource.school                                    = Hochschule
 post.resource.school.help                               = Der Name der Schule, an der eine Abhandlung (z.B. Diplomarbeit) geschrieben wurde
 post.resource.series                                    = Reihe
@@ -1793,6 +1797,7 @@ publications = Publikationen
 publications.abstract.headline   = Zusammenfassung
 publications.citations.headline  = Zitieren Sie diese Publikation
 publications.discussion.headline = Kommentare und Rezensionen
+publications.related.empty       = keine Publikationen gefunden
 publications.resource.headline   = Links und Ressourcen
 
 qrcode.actions.download                       = ohne QR-Code
@@ -1810,6 +1815,8 @@ ranking.normalized     = normalisiert
 ranking.not_normalized = nicht normalisiert
 ranking.tag_overlap    = Tag-\u00DCberlapp
 ranking.tfidf          = tfidf
+
+rating.reset = Bewertung zur\u00FCcksetzen
 
 recommended.pagetitle = Empfohlene Beitr\u00E4ge
 
