--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -431,6 +431,8 @@ discussion.references         = \u0421\u0441\u044B\u043B\u043A\u0438
 discussion.resourceLink       = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0432\u043D\u0443\u0442\u0440\u0435\u043D\u044E\u044E \u0441\u0441\u044B\u043B\u043A\u0443 \u043D\u0430 \u044D\u0442\u0443
 discussion.resourceLink.help  = \u0412\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u044D\u0442\u043E\u0442 \u0432\u043D\u0443\u0442\u0440\u0435\u043D\u043D\u0438\u0439 \u043B\u0438\u043D\u043A, \u0447\u0442\u043E\u0431\u044B \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u0441\u0441\u044B\u043B\u043A\u0443 \u043D\u0430 \u044D\u0442\u0443 \u0437\u0430\u043F\u0438\u0441\u044C \u0432 \u0432\u0430\u0448\u0435\u0439 \u0434\u0438\u0441\u043A\u0443\u0441\u0441\u0438\u0438. \u041F\u0440\u043E\u0441\u0442\u043E \u0441\u043A\u043E\u043F\u0438\u0440\u0443\u0439\u0442\u0435 \u0432\u043D\u0443\u0442\u0440\u0435\u043D\u043D\u0438\u0439 \u043B\u0438\u043D\u043A \u0438 \u0432\u0441\u0442\u0430\u0432\u044C\u0442\u0435 \u0435\u0433\u043E \u0432 \u0442\u0435\u043A\u0441\u0442 \u0412\u0430\u0448\u0435\u0439 \u0434\u0438\u0441\u043A\u0443\u0441\u0441\u0438\u0438.
 discussion.resourceLink.title = \u0412\u043D\u0443\u0442\u0440\u0435\u043D\u043D\u0438\u0439 \u043B\u0438\u043D\u043A
+discussion.show.less          = 
+discussion.show.more          = 
 discussion.showGroup          = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u0438 \u0433\u0440\u0443\u043F\u043F\u044B {0}
 discussion.showUser           = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u0438 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F {0}
 
@@ -1387,6 +1389,7 @@ post.resource.comment.on                                = ,
 post.resource.comment.placeholder                       = 
 post.resource.comment.text                              = \u0442\u0435\u043A\u0441\u0442
 post.resource.comment.text.help                         = \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0412\u0430\u0448 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439.
+post.resource.comment.update                            = 
 post.resource.comment.updatedOn                         = \u043F\u043E\u0441\u043B\u0435\u0434\u043D\u0435\u0435 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435
 post.resource.copytags                                  = \u0442\u044D\u0433\u0438 \u0441\u043A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0439 \u0437\u0430\u043F\u0438\u0441\u0438
 post.resource.crossref                                  = \u041F\u0435\u0440\u0435\u043A\u0440\u0435\u0441\u0442\u043D\u0430\u044F \u0441\u0441\u044B\u043B\u043A\u0430 BibTeX
@@ -1564,6 +1567,7 @@ post.resource.review.review                             = \u0440\u0435\u0446\u04
 post.resource.review.reviews                            = \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u0439
 post.resource.review.text                               = \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u044F
 post.resource.review.text.help                          = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448\u0443 \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u044E \u0437\u0434\u0435\u0441\u044C.
+post.resource.review.update                             = 
 post.resource.school                                    = \u0443\u0447\u0435\u0431\u043D\u043E\u0435 \u0437\u0430\u0432\u0435\u0434\u0435\u043D\u0438\u0435
 post.resource.school.help                               = \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0443\u0447\u0435\u0431\u043D\u043E\u0433\u043E \u0437\u0430\u0432\u0435\u0434\u0435\u043D\u0438\u044F, \u0432 \u043A\u043E\u0442\u043E\u0440\u043E\u043C \u0431\u044B\u043B\u0430 \u043D\u0430\u043F\u0438\u0441\u0430\u043D\u0430 (\u043D\u0430\u043F\u0440\u0438\u043C\u0435\u0440, \u0431\u0430\u043A\u0430\u043B\u0430\u0432\u0440\u0441\u043A\u0430\u044F) \u0440\u0430\u0431\u043E\u0442\u0430
 post.resource.series                                    = \u0441\u0435\u0440\u0438\u0438
@@ -1640,6 +1644,7 @@ publications = \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438
 publications.abstract.headline   = \u0410\u043D\u043D\u043E\u0442\u0430\u0446\u0438\u044F
 publications.citations.headline  = \u0426\u0438\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u044D\u0442\u0443 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E
 publications.discussion.headline = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438 \u0438 \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u0438
+publications.related.empty       = 
 publications.resource.headline   = \u041B\u0438\u043D\u043A\u0438 \u0438 \u0440\u0435\u0441\u0443\u0440\u0441\u044B
 
 qrcode.actions.download                       = \u0431\u0435\u0437 QR-\u043A\u043E\u0434\u0430
@@ -1657,6 +1662,8 @@ ranking.normalized     = \u043D\u043E\u0440\u043C\u0430\u043B\u0438\u0437\u043E\
 ranking.not_normalized = \u043D\u0435 \u043D\u043E\u0440\u043C\u0430\u043B\u0438\u0437\u043E\u0432\u0430\u043D\u043D\u044B\u0435
 ranking.tag_overlap    = \u043F\u0435\u0440\u0435\u0441\u0435\u0447\u0435\u043D\u0438\u0435 \u0442\u044D\u0433\u043E\u0432
 ranking.tfidf          = tfidf
+
+rating.reset = 
 
 recommended.pagetitle = \u0420\u0435\u043A\u043E\u043C\u0435\u043D\u0434\u0443\u0435\u043C\u044B\u0435 \u0437\u0430\u043F\u0438\u0441\u0438
 
