--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -314,7 +314,7 @@ community = community
 
 community.generalinformation = General Information
 community.page               = Community Page
-community.warning.edit       = Edit your own post.
+community.warning.edit       = If you want to view or edit the publication in your collection, follow <a href="{0}">this link</a>.
 community.warning.view       = You are currently viewing the community post.
 
 concept.sidebar.title       = browse
