--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -313,7 +313,7 @@ community = Community
 
 community.generalinformation = Allgemeine Informationen
 community.page               = Community Seite
-community.warning.edit       = Bearbeiten Sie Ihren eigenen Eintrag.
+community.warning.edit       = Wenn Sie die Publikation in Ihrer Sammlung bearbeiten wollen, folgen Sie <a href="{0}">diesem Link</a>.
 community.warning.view       = Sie betrachten hier den Gemeinschaftseintrag.
 
 concept.sidebar.title       = St\u00F6bern
