Added entry for followed posts to navigation

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1163,6 +1163,7 @@ navi.federatedBibtexKey          = federated search: BibTeX key
 navi.federatedGroup              = federated search: group
 navi.federatedTag                = federated search: tag
 navi.federatedUser               = federated search: user
+navi.followedPosts               = followed posts
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
