--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1114,6 +1114,7 @@ navi.editTags.inactive           = Melden Sie sich an, um Ihre Tags zu bearbeite
 navi.editTagsAndConcepts         = Tags und Konzepte bearbeiten
 navi.export                      = Export
 navi.federated                   = System\u00FCbergreifende Suche
+navi.followedPosts               = verfolgte Eintr\u00E4ge
 navi.followees                   = verfolgte Benutzer
 navi.followers                   = Verfolger
 navi.friend                      = Freund
